--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,14 @@
         }
     ],
     "require": {
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
-        "drupal/core-dev": "^9",
-        "ergebnis/composer-normalize": "^2.28",
-        "mglaman/drupal-check": "^1",
-        "php-parallel-lint/php-parallel-lint": "^1.3",
-        "phpmd/phpmd": "^2.12",
-        "phpro/grumphp": "^1",
-        "phpspec/prophecy-phpunit": "^2.0",
-        "phpstan/phpstan": "^1.8"
+        "dealerdirect/phpcodesniffer-composer-installer": "*",
+        "drupal/core-dev": "*",
+        "ergebnis/composer-normalize": "*",
+        "mglaman/drupal-check": "*",
+        "php-parallel-lint/php-parallel-lint": "*",
+        "phpmd/phpmd": "*",
+        "phpro/grumphp": "*",
+        "phpspec/prophecy-phpunit": "*"
     },
     "autoload": {
         "psr-4": {
@@ -35,26 +34,5 @@
             "drupal-grumphp.code-workspace",
             ".github"
         ]
-    },
-    "config": {
-        "allow-plugins": {
-            "dealerdirect/phpcodesniffer-composer-installer": true,
-            "ergebnis/composer-normalize": true,
-            "phpro/grumphp": true
-        }
-    },
-    "extra": {
-        "drupal-scaffold": {
-            "file-mapping": {
-                "[web-root]/../grumphp.yml": {
-                    "mode": "replace",
-                    "overwrite": false,
-                    "path": "configs/grumphp.yml"
-                }
-            }
-        },
-        "grumphp": {
-            "config-default-path": "configs/grumphp.yml"
-        }
     }
 }
