--- a/.releaserc
+++ b/.releaserc
@@ -1,18 +1,27 @@
 {
   "branches": [
+    "*.x",
     "main",
-    "dev",
-    "*.x"
+    "next",
+    "next-major",
+    {
+      "name": "beta",
+      "prerelease": true
+    },
+    {
+      "name": "alpha",
+      "prerelease": true
+    }
   ],
   "plugins": [
     "@semantic-release/commit-analyzer",
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     [
-      '@semantic-release/git',
+      "@semantic-release/git",
       {
-      assets: [
-        'CHANGELOG.md'
+        "assets": [
+          "CHANGELOG.md"
         ]
       }
     ],
