--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "*",
         "drupal/core-dev": "*",
         "ergebnis/composer-normalize": "*",
+        "friendsofphp/php-cs-fixer": "*",
         "php-parallel-lint/php-parallel-lint": "*",
         "phpmd/phpmd": "*",
         "phpro/grumphp": "*",
